# euler

./: CMakeLists.txt  README.md  problem1.dyalog  problem1.q  problem10.q  problem11.cc  problem11.q  problem12.q  problem13.q  problem14.q  problem2.dyalog  problem2.q  problem3.dyalog  problem3.q  problem4.dyalog  problem4.q  problem5.dyalog  problem5.q  problem6.q  problem7.dyalog  problem7.q  problem8.dyalog  problem8.q  problem9.dyalog  problem9.q
